--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                     <form action="">
 
                                     
-                                    <table class="table">
+                                    <table  class="table">
                                         <thead class="table-head">
                                             <tr>
                                                 <th scope="col">Sl.No <i class="fa-solid fa-chevron-down"></i></th>
@@ -132,7 +132,7 @@
 
                                             </tr>
                                         </thead>
-                                        <tbody>
+                                        <tbody id="tbl">
                                             <tr class="position-relative">
                                                 <th scope="row">1</th>
                                                 <td id="name">Mr. Michael Johnson</td>
@@ -157,7 +157,7 @@
 
                                             <!-- testing table  -->
 
-                                            <tr class="position-relative">
+                                            <!-- <tr class="position-relative">
                                                 <th scope="row"></th>
                                                 <td id="Name"></td>
                                                 <td id="Email"></td>
@@ -177,7 +177,7 @@
                                                         onclick="display('empDelete')"><i class="fa-solid fa-trash"></i>
                                                         <span>Delete</span></div>
                                                 </div>
-                                            </tr>
+                                            </tr> -->
 
                                             <!-- testing table -->
 
