--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <section>
         <div class="container-fluid contain">
-            <div class="content" id="content">
+            <div class="content" id="content"  >
                 <aside class="d-flex  flex-column">
                     <header class="side-header d-flex flex-column justify-content-center  p-3">
                         <div>
@@ -385,7 +385,7 @@
 
             </div>
 
-            <!-- card edit employee -->
+            <!-- edit employee -->
 
             <div class="card card-employee-edit" id="empEdit">
                 <div class="card-body d-flex flex-column ">
@@ -393,42 +393,42 @@
                         <h2 class="card-heading pb-3 txt-color">Edit Employee</h2>
                     </header>
 
-                    <div class="card-bd">
+                    <!-- <div class="card-bd">
                         <div class="d-flex gap-3 align-items-center">
                             <input type="file" class="file-upload">
-                            <label for=""
+                            <label 
                                 class="upload upload-image d-flex justify-content-center flex-column align-items-center mb-3">
                                 <img src="images\person.png" alt="">
                             </label>
                             <div class="button ">
                                 <button class="btn btn-lg bg-light btn-cancel ms-1 btn-none p-3">Change</button>
                             </div>
-                        </div>
+                        </div> -->
 
 
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-sm-4 mb-3">
-                                <label for="" class="form-label txt-color star mb-3">Salutaton </label>
-                                <select class="form-select form-select-lg  text-secondary txt-in"
+                                <label  class="form-label txt-color star mb-3">Salutaton </label>
+                                <select id="editSalutation" class="form-select form-select-lg  text-secondary txt-in"
                                     aria-label="Large select example">
                                     <option selected class="">select</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
+                                    <option value="Mr">Mr</option>
+                                    <option value="Mrs">Mrs</option>
+                                    
                                 </select>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-4 mb-3">
-                                <label for="" class="form-label txt-color star ">First Name </label>
+                                <label  class="form-label txt-color star ">First Name </label>
                                 <div class="input-group ">
-                                    <input type="text" class="form-control txt-in" placeholder="john" aria-label="john"
+                                    <input id="editFirstName" type="text" class="form-control txt-in" placeholder="john" aria-label="john"
                                         aria-describedby="basic-addon2">
 
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-4 mb-3">
-                                <label for="" class="form-label txt-color star ">Last Name </label>
+                                <label  class="form-label txt-color star ">Last Name </label>
                                 <div class="input-group ">
-                                    <input type="text" class="form-control txt-in" placeholder="doe" aria-label="doe"
+                                    <input id="editLastName" type="text" class="form-control txt-in" placeholder="doe" aria-label="doe"
                                         aria-describedby="basic-addon2">
                                 </div>
                             </div>
@@ -438,18 +438,41 @@
 
                         <div class="row ">
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
-                                <label for="" class="form-label txt-color star ">Email Address </label>
+                                <label  class="form-label txt-color star ">Email Address </label>
                                 <div class="input-group ">
-                                    <input type="text" class="form-control txt-in" placeholder="mail@simmple.com"
+                                    <input id="editEmail" type="text" class="form-control txt-in" placeholder="mail@simmple.com"
                                         aria-label="john" aria-describedby="basic-addon2">
 
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
-                                <label for="" class="form-label txt-color star">Mobile Number </label>
+                                <label  class="form-label txt-color star">Mobile Number </label>
                                 <div class="input-group ">
-                                    <input type="text" class="form-control txt-in"
+                                    <input id="editPhone" type="text" class="form-control txt-in"
                                         placeholder="enter your mobile number" aria-label="doe"
+                                        aria-describedby="basic-addon2">
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- username and password  -->
+
+                        <div class="row ">
+                            <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
+                                <label for="" class="form-label txt-color star ">Username</label>
+                                <div class="input-group ">
+                                    <input  id="editUserName" type="txt" required class="form-control txt-in"
+                                        placeholder="enter Username" aria-label="john"
+                                        aria-describedby="basic-addon2">
+
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
+                                <label for="" class="form-label txt-color star">Password </label>
+                                <div class="input-group ">
+                                    <input  id="editPassword" type="password" required class="form-control txt-in"
+                                        placeholder="enter your password" aria-label="doe"
                                         aria-describedby="basic-addon2">
 
                                 </div>
@@ -460,25 +483,25 @@
 
                         <div class="row ">
                             <div class="col-lg-6 col-md-12 col-sm-6 mb-3">
-                                <label for="" class="form-label txt-color star">Date of Birth </label>
+                                <label  class="form-label txt-color star">Date of Birth </label>
                                 <div class="input-group ">
-                                    <input type="date" class="form-control txt-in">
+                                    <input id="editDob" type="date" class="form-control txt-in">
 
                                 </div>
                             </div>
 
                             <div class="col-lg-6 col-md-12 col-sm-6 mb-3">
-                                <label for="" class="form-label txt-color star">Gender </label>
+                                <label  class="form-label txt-color star">Gender </label>
                                 <div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="inlineRadio1" value="option1">
+                                        <input class="form-check-input" type="radio" name="editGender"
+                                            id="editMale" value="male">
                                         <label class="form-check-label  txt-color txt-400"
                                             for="inlineRadio1">Male</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="inlineRadio2" value="option2">
+                                        <input class="form-check-input" type="radio" name="editGender"
+                                            id="editFemale" value="female">
                                         <label class="form-check-label  txt-color txt-400"
                                             for="inlineRadio2">Female</label>
                                     </div>
@@ -489,10 +512,24 @@
                         <!-- four -->
                         <div class="row">
                             <div class="col-12 mb-3">
-                                <label for="" class="form-label txt-color star">Address </label>
+                                <label  class="form-label txt-color star">Address </label>
                                 <div class="input-group ">
-                                    <input type="text" class="form-control txt-in" placeholder="enter address"
+                                    <input id="editAddress" type="text" class="form-control txt-in" placeholder="enter address"
                                         aria-label="john" aria-describedby="basic-addon2">
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- qualification -->
+
+                        <div class="row">
+                            <div class="col-12 mb-3">
+                                <label for="" class="form-label txt-color star">Qualification </label>
+                                <div class="input-group ">
+                                    <input  id="editQualification" type="text" required class="form-control txt-in"
+                                        placeholder="enter address" aria-label="john"
+                                        aria-describedby="basic-addon2">
 
                                 </div>
                             </div>
@@ -502,8 +539,8 @@
 
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
-                                <label for="" class="form-label txt-color star">Country </label>
-                                <select class="form-select form-select-lg  text-secondary txt-in"
+                                <label  class="form-label txt-color star">Country </label>
+                                <select id="editCountry" class="form-select form-select-lg  text-secondary txt-in"
                                     aria-label="Large select example">
                                     <option selected class="">select</option>
                                     <option value="1">One</option>
@@ -512,8 +549,8 @@
                                 </select>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
-                                <label for="" class="form-label txt-color star">State </label>
-                                <select class="form-select form-select-lg  text-secondary txt-in"
+                                <label  class="form-label txt-color star">State </label>
+                                <select id="editState" class="form-select form-select-lg  text-secondary txt-in"
                                     aria-label="Large select example">
                                     <option selected class="">select</option>
                                     <option value="1">One</option>
@@ -527,17 +564,17 @@
 
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
-                                <label for="" class="form-label txt-color star">City </label>
+                                <label  class="form-label txt-color star">City </label>
                                 <div class="input-group ">
-                                    <input type="text" class="form-control txt-in" placeholder="enter city"
+                                    <input id="editCity" type="text" class="form-control txt-in" placeholder="enter city"
                                         aria-label="john" aria-describedby="basic-addon2">
 
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
-                                <label for="" class="form-label txt-color star">Pin/Zip </label>
+                                <label  class="form-label txt-color star">Pin/Zip </label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control txt-in" placeholder="enter pin/zip"
+                                    <input id="editPin" type="text" class="form-control txt-in" placeholder="enter pin/zip"
                                         aria-label="doe" aria-describedby="basic-addon2">
 
                                 </div>
@@ -547,7 +584,7 @@
                                 <div class="row">
                                     <div class="button ">
                                         <button class="btn btn-lg bg-light  ms-1 btn-none p-3">Cancel</button>
-                                        <button class="btn btn-lg  bg-color btn-fill text-white ms-1 p-3">save
+                                        <button class="btn btn-lg  bg-color btn-fill text-white ms-1 p-3" id="saveEdit">save
                                             changes</button>
                                     </div>
                                 </div>
