--- a/view.html
+++ b/view.html
@@ -99,7 +99,7 @@
                                 <div class="d-flex flex-column align-items-center card-body-details mb-5">
                                     <img src="images\Background Image.png" alt="">
                                     <div class="div-round">
-                                        <img class="div-round-img" src="images\person.png" alt="">
+                                        <img class="div-round-img" id="viewEmpImg" alt="">
                                     </div>
                                 </div>
 
@@ -168,8 +168,8 @@
                                     </div>
 
                                     <div class="d-flex justify-content-end">
-                                        <button class="btn btn-lg btn-danger btn-fill text-white ms-1 p-3 px-4 " >Delete</button>
-                                        <button class="btn btn-lg bg-color btn-fill text-white ms-1 p-3 px-4">Edit details</button>
+                                        <button class="btn btn-lg btn-danger btn-fill text-white ms-1 p-3 px-4 " id="deleteBtn">Delete</button>
+                                        <button class="btn btn-lg bg-color btn-fill text-white ms-1 p-3 px-4"  id="editBtn">Edit details</button>
                                     </div>
 
 
@@ -204,7 +204,7 @@
                     <div class="d-flex flex-column align-items-center card-body-details mb-5">
                         <img src="images\Background Image.png" alt="">
                         <div class="div-round">
-                            <img class="div-round-img" src="images\person.png" alt="">
+                            <img class="div-round-img" id="viewEmployeeImage" alt="">
                         </div>
                     </div>
 
@@ -270,17 +270,18 @@
                         <h2 class="card-heading pb-3 txt-color">Edit Employee</h2>
                     </header>
 
-                    <!-- <div class="card-bd">
+                    <div class="card-bd">
                         <div class="d-flex gap-3 align-items-center">
-                            <input type="file" class="file-upload">
-                            <label 
+                            <input type="file" class="file-upload" id="viewEditEmp" onchange="avatarPreviewView()">
+                            <label  for="viewEditEmp"
                                 class="upload upload-image d-flex justify-content-center flex-column align-items-center mb-3">
-                                <img src="images\person.png" alt="">
+                                <img id="viewEditEmpImg" alt="">
                             </label>
-                            <div class="button ">
+                            <!-- <div class="button ">
                                 <button class="btn btn-lg bg-light btn-cancel ms-1 btn-none p-3">Change</button>
-                            </div>
-                        </div> -->
+                            </div> -->
+                            <label for="viewEditEmp" class="btn btn-lg bg-light btn-cancel ms-1 btn-none p-3">Change</label>
+                        </div>
 
 
                         <div class="row">
@@ -290,9 +291,9 @@
                                     aria-label="Large select example">
                                     <option selected class="">select</option>
                                     <option value="Mr">Mr</option>
-                                    <option value="Mrs">Mrs</option>
-                                    
+                                    <option value="Mrs">Mrs</option>     
                                 </select>
+                                <label id="errorSalutation"></label>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-4 mb-3">
                                 <label  class="form-label txt-color star ">First Name </label>
@@ -330,6 +331,7 @@
                                         aria-describedby="basic-addon2">
 
                                 </div>
+                                <label id="errorPhone"></label>
                             </div>
                         </div>
 
@@ -365,24 +367,26 @@
                                     <input id="editDob" type="date" class="form-control txt-in">
 
                                 </div>
+                                <label id="dobValidation"></label>
                             </div>
 
                             <div class="col-lg-6 col-md-12 col-sm-6 mb-3">
                                 <label  class="form-label txt-color star">Gender </label>
                                 <div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="editGender"
-                                            id="editMale" value="male">
+                                        <input class="form-check-input" type="radio" name="gender"
+                                             value="Male">
                                         <label class="form-check-label  txt-color txt-400"
                                             for="inlineRadio1">Male</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="editGender"
-                                            id="editFemale" value="female">
+                                        <input class="form-check-input" type="radio" name="gender"
+                                             value="Female">
                                         <label class="form-check-label  txt-color txt-400"
                                             for="inlineRadio2">Female</label>
                                     </div>
                                 </div>
+                                <label id="genderValidation"></label>
                             </div>
                         </div>
 
@@ -479,12 +483,43 @@
                     </div>
                 </div>
 
+            <!-- employee delete -->
+
+            <div class="card" id="empDelete">
+                <div class="card-body  d-flex flex-column">
+                    <header>
+                        <h2 class="card-heading pb-3 txt-color">Delete Employee</h2>
+                    </header>
+
+                    <div class="card-bd">
+                        <p>Are you sure you want to delete this employee?</p>
+
+                        <div class="d-flex justify-content-end">
+                            <div class="row">
+                                <div class="button ">
+                                    <button class="btn btn-lg bg-light  ms-1 btn-none p-3" onclick="Close('empDelete')">Cancel</button>
+                                    <button class="btn btn-lg  bg-color btn-fill text-white ms-1 p-3 " id="deleteEmployee">Delete</button>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="button " id="btnClose">
+                        <button class="btn btn-lg bg-light btn-close ms-1 btn-none p-3"
+                            onclick="Close('empDelete')"></button>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <span id="show"></span>
     </section>
 
     <script src="view.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 
 </html>
