--- a/view.html
+++ b/view.html
@@ -293,7 +293,7 @@
                                     <option value="Mr">Mr</option>
                                     <option value="Mrs">Mrs</option>     
                                 </select>
-                                <label id="errorSalutation"></label>
+                                <label id="editSalutationError"></label>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-4 mb-3">
                                 <label  class="form-label txt-color star ">First Name </label>
@@ -302,6 +302,8 @@
                                         aria-describedby="basic-addon2">
 
                                 </div>
+                                <label id="editFirstNameError"></label>
+
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-4 mb-3">
                                 <label  class="form-label txt-color star ">Last Name </label>
@@ -309,6 +311,7 @@
                                     <input id="editLastName" type="text" class="form-control txt-in" placeholder="doe" aria-label="doe"
                                         aria-describedby="basic-addon2">
                                 </div>
+                                <label id="editLastNameError"></label>
                             </div>
                         </div>
 
@@ -322,6 +325,7 @@
                                         aria-label="john" aria-describedby="basic-addon2">
 
                                 </div>
+                                <label id="editEmailError"></label>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
                                 <label  class="form-label txt-color star">Mobile Number </label>
@@ -331,7 +335,7 @@
                                         aria-describedby="basic-addon2">
 
                                 </div>
-                                <label id="errorPhone"></label>
+                                <label id="editPhoneError"></label>
                             </div>
                         </div>
 
@@ -346,6 +350,7 @@
                                         aria-describedby="basic-addon2">
 
                                 </div>
+                                <label id="editUserNameError"></label>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
                                 <label for="" class="form-label txt-color star">Password </label>
@@ -355,6 +360,7 @@
                                         aria-describedby="basic-addon2">
 
                                 </div>
+                                <label id="editPasswordError"></label>
                             </div>
                         </div>
 
@@ -367,26 +373,26 @@
                                     <input id="editDob" type="date" class="form-control txt-in">
 
                                 </div>
-                                <label id="dobValidation"></label>
+                                <label id="editDobError"></label>
                             </div>
 
                             <div class="col-lg-6 col-md-12 col-sm-6 mb-3">
                                 <label  class="form-label txt-color star">Gender </label>
                                 <div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender"
-                                             value="Male">
+                                        <input id="editMale" class="form-check-input" type="radio" name="gender"
+                                             value="male">
                                         <label class="form-check-label  txt-color txt-400"
                                             for="inlineRadio1">Male</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender"
-                                             value="Female">
+                                        <input id="editFemale" class="form-check-input" type="radio" name="gender"
+                                             value="female">
                                         <label class="form-check-label  txt-color txt-400"
                                             for="inlineRadio2">Female</label>
                                     </div>
                                 </div>
-                                <label id="genderValidation"></label>
+                                <label id="editGenderError"></label>
                             </div>
                         </div>
 
@@ -399,6 +405,7 @@
                                         aria-label="john" aria-describedby="basic-addon2">
 
                                 </div>
+                                <label id="editAddressError"></label>
                             </div>
                         </div>
 
@@ -413,6 +420,7 @@
                                         aria-describedby="basic-addon2">
 
                                 </div>
+                                <label id="editQualificationError"></label>
                             </div>
                         </div>
 
@@ -428,6 +436,7 @@
                                     <option value="2">Two</option>
                                     <option value="3">Three</option>
                                 </select>
+                                <label id="editCountryError"></label>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
                                 <label  class="form-label txt-color star">State </label>
@@ -438,6 +447,7 @@
                                     <option value="2">Two</option>
                                     <option value="3">Three</option>
                                 </select>
+                                <label id="editStateError"></label>
                             </div>
                         </div>
 
@@ -451,6 +461,7 @@
                                         aria-label="john" aria-describedby="basic-addon2">
 
                                 </div>
+                                <label id="editCityError"></label>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 mb-3">
                                 <label  class="form-label txt-color star">Pin/Zip </label>
@@ -459,6 +470,7 @@
                                         aria-label="doe" aria-describedby="basic-addon2">
 
                                 </div>
+                                <label id="editPinError"></label>
                             </div>
 
                             <div class="d-flex justify-content-end">
