--- a/view.html
+++ b/view.html
@@ -201,7 +201,8 @@
             <!-- popup -->
 
  
-
+            <div class="overlay" id="overlay" onclick="overlayClose()">
+            </div>
             <!-- edmployee edit -->
 
             <div class="card overflow-auto card-scroll-card card-employee-edit" id="empEdit">
