--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
                 </div>
             </div>
 
+
+            <!-- overlayer  -->
+
+            <div class="overlay" id="overlay" onclick="overlayClose()">
+            </div>
+
             <!-- popup -->
 
             <!-- add employee -->
@@ -189,14 +195,15 @@
                     </header>
 
                     <div class="card-bd ">
-                        <input type="file" class="file-upload" id="img-upload">
-                        <label for="img-upload" "
+                        <input type="file" class="file-upload" id="img-upload" onchange="AddImgPreview()">
+                        <label for="img-upload" 
                                 class=" upload d-flex justify-content-center flex-column align-items-center mb-3">
                             <i class="bi bi-upload"></i>
                             <div class="d-flex flex-column align-items-center header">
                                 <h5>Upload Image</h5>
                                 <h6 class="upload-h6">PNG, JPG files are allowed</h6>
                             </div>
+                            <img src="" id="addEmpImg">
                         </label>
 
                         <div class="row">
@@ -389,7 +396,7 @@
                                 <div class="row">
                                     <div class="button ">
                                         <button class="btn btn-lg bg-light  ms-1 btn-none p-3"
-                                            type="reset">Cancel</button>
+                                            onclick="Close('addEmployee')">Cancel</button>
 
                                         <button class="btn btn-lg  bg-color btn-fill text-white ms-1 p-3"
                                             id="addEmployeeBtn">
