--- a/view.html
+++ b/view.html
@@ -68,7 +68,7 @@
                 <div class="div-body d-flex flex-column p-3">
                     <header class="body-header d-flex justify-content-between  mb-3">
                         <div class="heading-body d-flex flex-column">
-                            <p class="mb-0">Dashboard / Employees / Emplolyee Details</p>
+                            <p class="mb-0">Dashboard / <a class="aTag" href="index.html">Employees</a> / Emplolyee Details</p>
                             <h4>Employees</h4>
                         </div>
                         <!-- <div class="heading-search p-3 d-flex align-items-center gap-2">
@@ -231,7 +231,7 @@
                                 <label class="form-label txt-color star mb-3">Salutaton </label>
                                 <select id="editSalutation" class="form-select form-select-lg  text-secondary txt-in"
                                     aria-label="Large select example">
-                                    <option selected class="">select</option>
+                                    <!-- <option selected class="">select</option> -->
                                     <option value="Mr">Mr</option>
                                     <option value="Mrs">Mrs</option>
                                 </select>
@@ -372,7 +372,7 @@
                                 <label class="form-label txt-color star">Country </label>
                                 <select id="editCountry" class="form-select form-select-lg  text-secondary txt-in"
                                     aria-label="Large select example">
-                                    <option selected class="">select</option>
+                                    <!-- <option selected class="">select</option> -->
                                     <option value="USA">USA</option>
                                     <option value="India">India</option>
                                     <option value="UAE">UAE</option>
@@ -383,7 +383,7 @@
                                 <label class="form-label txt-color star">State </label>
                                 <select id="editState" class="form-select form-select-lg  text-secondary txt-in"
                                     aria-label="Large select example">
-                                    <option selected class="">select</option>
+                                    <!-- <option selected class="">select</option> -->
                                     <option value="Kerala">Kerala</option>
                                     <option value="LA">LA</option>
                                     <option value="Dubai">Dubai</option>
