--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <!-- body -->
 
                     <div class="section-body d-flex flex-column  mb-3">
-                        <div class="card mb-3">
+                        <div class="card mb-3 tableCard">
                             <div class="card-body">
                                 <div class="header-card d-flex justify-content-between">
                                     <div class="card-header-heading d-flex align-items-center gap-2 p-2">
@@ -105,6 +105,7 @@
                                             <option value="3">3</option>
                                             <option value="4">4</option>
                                             <option selected value="5">5</option>
+                                            <option id="totalEmployee" value="max">Total</option>
                                         </select>
 
                                         <p class="mb-0">of <span id="totalContnets">5</span></p>
@@ -446,7 +447,7 @@
                                 <label class="form-label txt-color star mb-3">Salutaton </label>
                                 <select id="editSalutation" class="form-select form-select-lg  text-secondary txt-in"
                                     aria-label="Large select example">
-                                    <option selected class="">select</option>
+                                    <!-- <option selected class="">select</option> -->
                                     <option value="Mr">Mr</option>
                                     <option value="Mrs">Mrs</option>
 
@@ -595,7 +596,7 @@
                                 <label class="form-label txt-color star">Country </label>
                                 <select id="editCountry" class="form-select form-select-lg  text-secondary txt-in"
                                     aria-label="Large select example">
-                                    <option selected class="">select</option>
+                                    <!-- <option selected class="">select</option> -->
                                     <option value="USA">USA</option>
                                     <option value="India">India</option>
                                     <option value="UAE">UAE</option>
@@ -607,7 +608,7 @@
                                 <label class="form-label txt-color star">State </label>
                                 <select id="editState" class="form-select form-select-lg  text-secondary txt-in"
                                     aria-label="Large select example">
-                                    <option selected class="">select</option>
+                                    <!-- <option selected class="">select</option> -->
                                     <option value="Kerala">Kerala</option>
                                     <option value="LA">LA</option>
                                     <option value="Dubai">Dubai</option>
